# crypto-lab

./: CMakeLists.txt  README.md  main.cpp
Affine/: affine.cpp  affine.h
Classiques/Affine/: affine.h  affinerandomkey.cpp
Classiques/Cesar/: cesar.cpp  cesar.h
Classiques/Hill/: hill.cpp  hill.h
Classiques/OTP/: otp.cpp  otp.h
Classiques/playfair/: playfair.cpp
Classiques/subs_alt/: subs_alt.cpp  subs_alt.h
Classiques/vignere/: vignere.cpp  vignere.h
PythonAttacks/: cesarattack.py
Tests/: cesartest.cpp
tpPython/: __init__.py  asymmetric_crypto.py  caesar_cipher.py  classical_ciphers.py  digital_signatures.py  hill_cipher.py  otp_cipher.py  secure_communications.py  tp1_2.py  tp2.py  tp4.py  tp6.py
webapp/: app.py
webapp/certs/: server.crt  server.key
webapp/static/: app.js  index.html  styles.css
